2012-11-05  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 10.10.0-rc2 Released.

	* Fix a bug which made ConfBridge not record the conference when
	  the recording was initiated from an AMI/CLI command

	  (closes issue ASTERISK-20601)
	  Reported by: Vilius

2012-10-08  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 10.10.0-rc1 Released.

2012-10-08 13:46 +0000 [r374652]  Matthew Jordan <mjordan@digium.com>

	* apps/confbridge/conf_state.c (added),
	  apps/confbridge/conf_state_single.c (added),
	  apps/confbridge/conf_state_inactive.c (added),
	  apps/confbridge/conf_state_single_marked.c (added),
	  apps/confbridge/include/confbridge.h,
	  apps/confbridge/include/conf_state.h (added),
	  apps/confbridge/conf_state_multi.c (added),
	  apps/app_confbridge.c, apps/confbridge/conf_state_multi_marked.c
	  (added), apps/confbridge/conf_state_empty.c (added): Resolve
	  issues in ConfBridge regarding marked, waitmarked, and unmarked
	  users Thank's to Neil Tallim (flan)'s tireless testing, issue
	  reporting, and patches it became clear that app_confbridge had
	  some complex logic in how it handled interactions between marked,
	  waitmarked, and unmarked users. In particular, there were some
	  areas in which the interactions between the users resulted in
	  inconsistent behavior, and app_confbridge was missing logic in
	  how to handle some corner cases. Some areas included: * Poor
	  handling of mixing unmarked and waitmarked users *
	  Inconsistencies in how MOH and muting was applied to various
	  users * Handling of various announcements for different user
	  profile options flan's patches seem to fix the various issues,
	  but highlighted how hard the code could be to maintain. In an
	  attempt to make things easier to maintain and to more fully
	  enumerate the various cases that exist, this patch breaks up the
	  logic into a state machine-like setup. Please note that the